Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - switch to [MungeFile] for munging
            Dist::Zilla::MintingProfile::Author::ETHER and its data files
            during the build

0.102     2015-08-15 02:15:25Z
          - declare proper prereq version for Pod::Weaver::Section::Legal
          - switch from one hacky mechanism to determine the 'Legal' pod
            header to another hacky mechanism, but at least this one is more
            likely to do what I want
          - use :PerlExecFiles in [Test::Compile]
          - [AutoPrereqs] now looks for develop prerequisites in xt/
          - dist.ini in newly-minted dists will now never have trailing
            whitespace

0.101     2015-08-08 20:18:26Z
          - depend on the most recent List transformer, for the text wrapping
            feature
          - add use of the Verbatim transformer to the weaver plugin bundle
          - LICENSE file is now renamed as LICENCE for my own distributions
            (where I have authority) (or when the 'licence' option is set to
            'LICENCE'), and the pod section will read "COPYRIGHT AND LICENCE"

0.100     2015-07-19 05:16:43Z
          - ensure all static install configurations are correct and
            consistent with each other
          - fix test that breaks if [RewriteVersion] is not at least version
            0.010

0.099     2015-07-18 03:44:44Z
          - bump prereq on [Test::Pod::No404s], to get prereq injection
          - upgrade [MojibakeTests], to get the file in xt/author and prereq
            injection
          - pass add_tarball_name = 0 to [RewriteVersion(::*)?] configs
          - set x_static_install flag in some distributions

0.098     2015-06-29 03:31:18Z
          - fix test that broke due to [RewriteVersion::Transitional] 0.006

0.097     2015-06-25 04:11:43Z
          - bump up prereq for [Test::EOL], for the 'finders' option