@@ -143,6 +143,7 @@ Pod::Weaver::PluginBundle::Default = 4.000  ; contains all the things we use
 Pod::Weaver::Plugin::Transformer = 0
 Pod::Weaver::Section::Contributors = 0.008
 Pod::Weaver::Section::Legal = 4.011
+Pod::Weaver::Section::GenerateSection = 0
 
 [Prereqs / podweaver plugin bundle (indirect)]
 -phase = runtime
